back to home feature

--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
+    <a class="back-btn"  href="index.html">Back to Home Page</a>
     <div class="container">
         <form class="login_form">
             <h2>Sign in</h2>
