--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
             <input type="email" id="email" placeholder="Enter your email" required>
             
             <button type="submit">Sing in</button>
-            <p class="signup-link">Don't have an account? <a href="#">Sign up</a></p>
+            <p class="signup-link">Don't have an account? <a href="sign_in.html">Sign up</a></p>
         </form>
     </div>
 </body>
