--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
             <label for="email">Email</label>
             <input type="email" id="email" placeholder="Enter your email" required>
             
-            <button type="submit">Sing in</button>
+            <button type="submit">Sign in</button>
             <p class="signup-link">Don't have an account? <a href="sign_in.html">Sign up</a></p>
         </form>
     </div>
